==> KISHORE-0121/ATmega2560-Smart-Parking/DRIVERS/DAY 1/PWM/pwm.cpp <==
#include "pwm.h"
#include "gpio.h"

/* ============================================================
   ATmega2560 TIMER3 - CHANNEL A

   PWM OUTPUT:
   OC3A = PE3

   PWM MODE:
   Fast PWM 8-bit

   PWM FREQUENCY:
   F_CPU = 16 MHz
   Prescaler = 64

   PWM frequency:

   16 MHz / (64 × 256)
   = 976.56 Hz
   ============================================================ */


/* ---------- TIMER3 REGISTERS ---------- */

#define TCCR3A (*(volatile uint8_t *)0x90)
#define TCCR3B (*(volatile uint8_t *)0x91)

#define OCR3A  (*(volatile uint8_t *)0x98)


/* ============================================================
   PWM_Init
   ============================================================ */

void PWM_Init(void)
{
    /* --------------------------------------------------------
       PE3 / OC3A as OUTPUT
       -------------------------------------------------------- */

    SETIO(&DDRE, 3, OUTPUT);


    /* --------------------------------------------------------
       Timer3 Fast PWM 8-bit

       WGM30 = 1
       WGM31 = 0
       WGM32 = 1
       WGM33 = 0

       Mode = Fast PWM 8-bit

       COM3A1 = 1
       COM3A0 = 0

       Non-inverting PWM
       -------------------------------------------------------- */

    TCCR3A = (1 << 7) |
             (1 << 0);


    /*
       Timer stopped initially.

       WGM32 = 1
       CS32:0 = 000

       Timer clock = stopped
    */

    TCCR3B = (1 << 3);


    /* --------------------------------------------------------
       Initial duty cycle = 0%
       -------------------------------------------------------- */

    OCR3A = 0;
}


/* ============================================================
   PWM_SetDuty
   ============================================================ */

void PWM_SetDuty(uint8_t duty)
{
    /*
       Limit duty cycle to 0-100%
    */

    if (duty > 100)
    {
        duty = 100;
    }


    /*
       Convert:

       0%   -> 0
       50%  -> 127
       100% -> 255
    */

    OCR3A = (uint8_t)(((uint16_t)duty * 255U) / 100U);
}


/* ============================================================
   PWM_Start
   ============================================================ */

void PWM_Start(void)
{
    /*
       Timer3 clock:

       F_CPU / 64

       CS31 = 1
       CS30 = 1
       CS32 = 0
    */

    TCCR3B |= (1 << 1) |
              (1 << 0);
}


/* ============================================================
   PWM_Stop
   ============================================================ */

void PWM_Stop(void)
{
    /*
       Stop Timer3

       CS32:0 = 000
    */

    TCCR3B &= ~((1 << 2) |
                (1 << 1) |
                (1 << 0));
}
